# template-python

./: README.md  pyproject.toml
src/: main.py
src/practice0/: practice.py
