[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "S",
    "A",
    "C4",
    "SIM",
    "RUF",
    "PL",
]
ignore = ["RUF001", "RUF002", "RUF003", "RUF023", "PLR2004"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.14"


[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.9"]
